--- a/src/index.css
+++ b/src/index.css
@@ -1,69 +1,135 @@
+@import url('https://fonts.googleapis.com/css2?family=Asul:wght@400;700&family=Montserrat:wght@400;700&display=swap');
+
+* {
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+  outline: 0;
+  list-style: none;
+  text-decoration: none;
+}
+
 :root {
-  font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
-  line-height: 1.5;
+  --color-bg: #FFFBF1;
+  --color-blue: #104AE0;
+  --color-blue-secondary: rgba(16, 74, 224, 0.8);
+  --color-petnat: #FFD367;
+  --color-orange: #FFA24B;
+  --color-rose: #FF8979;
+  --color-red: #FF462D;
+  --color-white: #FFFFFF;
+  --color-light: rgba(255, 255, 255, 0.7);
+  --color-gradient: linear-gradient(180deg, var(--color-blue), transparent);
+  --transition: all 400ms ease;
+  --transform: scale(1.02);
+
+  --container-width-lg: 75%;
+  --container-width-md: 86%;
+  --container-width-sm: 90%;
+}
+
+html {
+  scroll-behavior: smooth;
+}
+
+body {
+  font-family: 'Montserrat', sans-serif;
+  font-style: normal;
   font-weight: 400;
+  font-size: 1rem;
+  line-height: 19px;
+  color: var(--color-blue);
+  background-color: var(--color-bg);
+}
 
-  color-scheme: light dark;
-  color: rgba(255, 255, 255, 0.87);
-  background-color: #242424;
+/* ========== HEADING STYLES ========= */
 
-  font-synthesis: none;
-  text-rendering: optimizeLegibility;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-  -webkit-text-size-adjust: 100%;
+h1, h2, h3, h4 {
+  font-family: 'Asul', sans-serif;
+}
+
+h1 {
+  font-weight: 400;
+  font-size: 6rem;
+  line-height: 116px;
+}
+
+h2 {
+  font-weight: 400;
+  font-size: 4rem;
+  line-height: 70px;
+}
+
+h3 {
+  font-weight: 700;
+  font-size: 1.625rem;
+  line-height: 32px;
+}
+
+/* ========== GENERAL STYLES ========= */
+
+.container {
+  width: var(--container-width-lg);
+  margin: 0 auto;
 }
 
 a {
   font-weight: 500;
-  color: #646cff;
+  color: var(--color-blue);
   text-decoration: inherit;
 }
+
 a:hover {
-  color: #535bf2;
+  color: var(--color-blue-secondary);
 }
 
-body {
-  margin: 0;
-  display: flex;
-  place-items: center;
-  min-width: 320px;
-  min-height: 100vh;
-}
+/* ========== BUTTON STYLES ========= */
 
-h1 {
-  font-size: 3.2em;
-  line-height: 1.1;
-}
-
-button {
+.btn-primary {
+  font-family: 'Montserrat', sans-serif;
+  background-color: var(--color-bg);
+  color: var(--color-blue);
+  border: 2px solid var(--color-blue);
   border-radius: 8px;
-  border: 1px solid transparent;
-  padding: 0.6em 1.2em;
-  font-size: 1em;
-  font-weight: 500;
-  font-family: inherit;
-  background-color: #1a1a1a;
-  cursor: pointer;
-  transition: border-color 0.25s;
-}
-button:hover {
-  border-color: #646cff;
-}
-button:focus,
-button:focus-visible {
-  outline: 4px auto -webkit-focus-ring-color;
+  box-shadow: 4px 4px 0 var(--color-blue);
+  font-size: 1rem;
+  font-weight: 600;
+  height: 46px;
+  margin: 0.5em 0;
+  transition-duration: .3s;
+  width: 100%;
 }
 
-@media (prefers-color-scheme: light) {
-  :root {
-    color: #213547;
-    background-color: #ffffff;
-  }
-  a:hover {
-    color: #747bff;
-  }
-  button {
-    background-color: #f9f9f9;
+.btn-primary:hover {
+    background-color: var(--color-blue);
+    box-shadow: 0 0;
+    color: var(--color-white);
+    cursor: pointer;
+}
+
+.btn-secondary {
+  font-family: 'Montserrat', sans-serif;
+  background-color: var(--color-blue-secondary);
+  background-color: var(--color-blue);
+  color: var(--color-white);
+  border: none;
+  border-radius: 8px;
+  font-size: 1rem;
+  font-weight: 600;
+  height: 51px;
+  margin: 0.5em 0;
+  transition-duration: .3s;
+  width: 100%;
+}
+
+.btn-secondary:hover {
+  background-color: var(--color-blue-secondary);
+  cursor: pointer;
+}
+/* ========== MEDIA QUERIES (SMALL DEVICES) ========= */
+
+@media screen and (max-width: 600) {
+  .container {
+    width: var(--container-width-sm);
   }
 }
