--- a/src/components/nav/nav.css
+++ b/src/components/nav/nav.css
@@ -1,5 +1,77 @@
-a {
+.nav--container {
+  position: relative;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.nav--container a {
   font-weight: 400;
   font-size: 1.75rem;
   line-height: 42px;
+}
+
+.nav--logo {
+  width: 100px;
+  height: auto;
+}
+
+.nav--menu {
+  display: none;
+}
+
+.nav--menu.active {
+  position: absolute;
+  margin-top: 1em;
+  top: 100%;
+  display: flex;
+  flex-direction: column;
+  background: var(--color-bg);
+  width: 100%;
+  height: 75vh;
+  border: 2px solid var(--color-blue);
+  border-radius: 8px;
+  box-shadow: -6px 6px 0 var(--color-blue);
+}
+
+.nav--list {
+  gap: 5em;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  margin: auto;
+  list-style: none;
+}
+
+.nav--basket {
+  display: flex;
+  align-items: center;
+  gap: 0.25em;
+}
+
+.nav--toggle {
+  display: block;
+  background: none;
+  border: none;
+}
+
+/* Media query for mobile menu */
+@media screen and (min-width: 768px) {
+
+  .nav--menu {
+    display: flex;
+    align-items: center;
+  }
+
+  .nav--list {
+    display: flex;
+    flex-direction: row;
+    gap: 4.5em;
+    list-style: none;
+  }
+
+  .nav--toggle {
+    display: none;
+  }
 }
