--- a/src/index.css
+++ b/src/index.css
@@ -27,7 +27,7 @@
   --spacer-md: 4em;
   --spacer-lg: 6em;
   --spacer-xl: 8em;
-  
+
   --container-width-lg: 75%;
   --container-width-md: 86%;
   --container-width-sm: 90%;
@@ -82,13 +82,10 @@ h3 {
 a {
   font-weight: 500;
   color: var(--color-blue);
-  opacity: 0.7;
   text-decoration: inherit;
 }
 
 a:hover {
-  /* color: var(--color-blue); */
-  opacity: 1;
   transition-duration: .3s;
 }
 
@@ -136,6 +133,22 @@ a:hover {
   cursor: pointer;
 }
 
+/* ========== UTILITY STYLES ========= */
+
+.bold {
+  font-weight: 700;
+  font-size: 1.25rem;
+}
+
+.line--wavy {
+  width: 100%;
+  margin: var(--spacer-lg) auto;
+}
+
+.line--blue {
+  border: 1px solid var(--color-blue);
+}
+
 /* ========== MEDIA QUERIES (MEDIUM DEVICES) ========= */
 
 @media screen and (min-width: 768px) {
@@ -152,10 +165,4 @@ a:hover {
     width: var(--container-width-lg);
     margin: 0 auto;
   }
-}
-
-
-.line--wavy {
-  width: 100%;
-  margin: 10em auto;
 }
