STYLE: Updating nav logo and menu item hover transform and transition properties

--- a/src/components/menu/menu.css
+++ b/src/components/menu/menu.css
@@ -51,7 +51,7 @@
 
 .menu--item-img:hover {
   transform: rotate(42deg);
-  transition: transform 0.4s ease-in-out;
+  transition: var(--transition);
 }
 
 .menu--item-details {
