--- a/src/components/nav/nav.css
+++ b/src/components/nav/nav.css
@@ -13,7 +13,14 @@
 .nav--logo {
   width: 150px;
   height: auto;
+  transform: rotate(-10deg);
 }
+
+.nav--logo:hover {
+  transform: rotate(0deg);
+  transition: var(--transition);
+}
+
 
 .nav--menu {
   display: none;
