FEAT: Added menu / menu items / nav badge icon and banner

--- a/src/components/banner/banner.css
+++ b/src/components/banner/banner.css
@@ -1,5 +1,6 @@
 .banner--container {
   margin: var(--spacer-md) auto;
+  position:relative
 }
 
 .banner--wrapper {
@@ -9,18 +10,22 @@
   white-space: nowrap;
   overflow: hidden;
   text-overflow: clip;
+  position: relative;
+
+      /* mask created with
+  https://css-generators.com/wavy-shapes/ */
+
+  --mask:
+    radial-gradient(67.08px at 50% 90.00px,#000 99%,#0000 101%) calc(50% - 60px) 0/120px 51% repeat-x,
+    radial-gradient(67.08px at 50% -60px,#0000 99%,#000 101%) 50% 30px/120px calc(51% - 30px) repeat-x,
+    radial-gradient(67.08px at 50% calc(100% - 90.00px),#000 99%,#0000 101%) calc(50% - 60px) 100%/120px 51% repeat-x,
+    radial-gradient(67.08px at 50% calc(100% + 60.00px),#0000 99%,#000 101%) 50% calc(100% - 30px)/120px calc(51% - 30px) repeat-x;
+  -webkit-mask: var(--mask);
+          mask: var(--mask);
 }
 
 .banner--wrapper h3 {
   font-size: 2.5rem;
   text-transform: uppercase;
-  padding: 1em 0em;
-}
-
-.banner--wrapper-upper {
-  margin-bottom: -5px;
-}
-
-.banner--wrapper-lower {
-  margin-top: -5px;
+  padding: 2em 0em;
 }
