--- a/src/components/nav/nav.css
+++ b/src/components/nav/nav.css
@@ -11,7 +11,7 @@
 }
 
 .nav--logo {
-  width: 150px;
+  width: 200px;
   height: auto;
   transform: rotate(-10deg);
 }
@@ -82,6 +82,27 @@
   display: flex;
   align-items: center;
   gap: 0.25em;
+}
+
+.nav--basket-icon-badge {
+  position: relative;
+}
+
+.nav--basket-icon-badge h4 {
+  position: absolute;
+  top: -10px;
+  right: -17px;
+  font-family: 'Montserrat', sans-serif;
+  font-size: 0.85rem;
+  width: 30px;
+  height: 30px;
+  border: 2px solid var(--color-bg);
+  border-radius: 50%;
+  background-color: var(--color-red);
+  color: var(--color-bg);
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 .nav--toggle {
