--- a/src/components/about/about.css
+++ b/src/components/about/about.css
@@ -9,6 +9,10 @@
   align-items: center;
 }
 
+.about--container-wrapper h2 {
+  line-height: 50px;
+}
+
 .about--container-info-text {
   margin-top: 27px;
   font-weight: 400;
