--- a/src/components/menu/menu.css
+++ b/src/components/menu/menu.css
@@ -34,7 +34,7 @@
 }
 
 .menu--item-title {
-  font-size: 2.5rem;
+  font-size: 2rem;
 }
 
 .menu--item-img {
@@ -95,6 +95,11 @@
     .menu--container > h2 {
       font-size: 4.5rem;
     }
+
+    .menu--item-title {
+      font-size: 2.5rem;
+    }
+
   }
 
 /* ========== MEDIA QUERIES (LARGE DEVICES) ========= */
