--- a/src/index.css
+++ b/src/index.css
@@ -41,7 +41,7 @@ body {
   font-family: "Montserrat", sans-serif;
   font-style: normal;
   font-weight: 400;
-  font-size: 1rem;
+  font-size: 1.125rem;
   line-height: 19px;
   color: var(--color-blue);
   background-color: var(--color-bg);
@@ -132,6 +132,24 @@ a:hover {
 
 .btn-secondary:hover {
   background-color: var(--color-blue-secondary);
+  cursor: pointer;
+}
+
+.btn-light {
+  font-family: Montserrat, sans-serif;
+  background-color: var(--color-bg);
+  color: var(--color-blue);
+  border: none;
+  font-size: 1rem;
+  font-weight: 600;
+  transition-duration: 0.3s;
+  border-radius: 8px;
+  padding: 15px 70px;
+  margin: 0.5em 0px;
+}
+
+.btn-light:hover {
+  background-color: var(--color-light);
   cursor: pointer;
 }
 
