--- a/src/components/hero/hero.css
+++ b/src/components/hero/hero.css
@@ -8,7 +8,6 @@
 
   .hero--title {
     font-size: 3.5rem;
-    max-width: 290px;
     text-align: center;
   }
 
@@ -30,6 +29,11 @@
     flex-direction: column;
     align-items: center;
     margin: var(--spacer-md) auto;
+    max-width: 375px;
+  }
+
+  .hero--title {
+    font-size: 4.5rem;
   }
 
   .hero--svg-wrapper {
