--- a/src/components/banner/banner.css
+++ b/src/components/banner/banner.css
@@ -6,6 +6,7 @@
 .banner--wrapper {
   background: #FFA24B;
   color: #FFF;
+  padding: 4em 0em;
   text-align: center;
   white-space: nowrap;
   overflow: hidden;
@@ -25,7 +26,18 @@
 }
 
 .banner--wrapper h3 {
-  font-size: 2.5rem;
   text-transform: uppercase;
-  padding: 2em 0em;
+}
+
+
+@media screen and (min-width: 768px) {
+
+  .banner--wrapper {
+    padding: 5em 0em;
+
+  }
+
+  .banner--wrapper h3 {
+    font-size: 2.5rem;
+  }
 }
