--- a/src/components/nav/nav.css
+++ b/src/components/nav/nav.css
@@ -7,10 +7,11 @@
 
 .nav--container a {
   font-size: 1.75rem;
+  line-height: 42px;
 }
 
 .nav--logo {
-  width: 200px;
+  width: 150px;
   height: auto;
   transform: rotate(-10deg);
 }
@@ -81,27 +82,6 @@
   display: flex;
   align-items: center;
   gap: 0.25em;
-}
-
-.nav--basket-icon-badge {
-  position: relative;
-}
-
-.nav--basket-icon-badge h4 {
-  position: absolute;
-  top: -10px;
-  right: -17px;
-  font-family: 'Montserrat', sans-serif;
-  font-size: 0.85rem;
-  width: 30px;
-  height: 30px;
-  border: 2px solid var(--color-bg);
-  border-radius: 50%;
-  background-color: var(--color-red);
-  color: var(--color-bg);
-  display: flex;
-  justify-content: center;
-  align-items: center;
 }
 
 .nav--toggle {
