--- a/src/components/badge/badge.css
+++ b/src/components/badge/badge.css
@@ -1,13 +1,19 @@
 .item--badge {
-  position: absolute;
+  /* position: absolute; */
+  /* top: 30px;
+  left: 30px; */
   width: 125px;
   height: 50px;
   display: flex;
   justify-content: center;
   align-items: center;
-  top: 30px;
-  left: 30px;
   padding: 15px 40px;
   border: 1px solid blue;
   border-radius: 50%;
+}
+
+.item--badge-absolute {
+    position: absolute;
+    top: 30px;
+    left: 30px;
 }
