--- a/src/components/menu/menu.css
+++ b/src/components/menu/menu.css
@@ -66,6 +66,7 @@
   color: var(--color-blue);
   border: 2px solid var(--color-blue);
   padding: 10px;
+  width: 135px;
 }
 
 #card--order-btn:active {
@@ -97,6 +98,7 @@
 
     .menu--container > h2 {
       font-size: 4.5rem;
+      margin-bottom: var(--spacer-sm)
     }
 
     /* .menu--item-title {
