REFACTOR: Made it so that you cannot checkout if you have no items in your cart

--- a/src/index.css
+++ b/src/index.css
@@ -12,7 +12,7 @@
 :root {
   --color-bg: #fffbf1;
   --color-blue: #104ae0;
-  --color-blue-secondary: rgba(16, 74, 224, 0.8);
+  --color-blue-secondary: #3368F0;
   --color-petnat: #ffd367;
   --color-orange: #ffa24b;
   --color-rose: #ff8979;
