STYLE: Small grid refactor

--- a/src/components/footer/footer.css
+++ b/src/components/footer/footer.css
@@ -62,18 +62,18 @@
     grid-template-columns: repeat(3, 1fr) 2fr;
     grid-template-rows: repeat(2, 1fr);
     grid-template-areas:
-        "footer--logo links1 links2 cta"
-        "footer--social links1 links2 copyright";
+        "logo links1 links2 cta"
+        "social links1 links2 copyright";
     place-items: center;
     padding: var(--spacer-lg) 0;
   }
 
   .footer--logo {
-    grid-area: footer--logo;
+    grid-area: logo;
   }
 
   .footer--social {
-    grid-area: footer--social;
+    grid-area: social;
     margin-top: 0;
   }
 
