--- a/src/components/about/about.css
+++ b/src/components/about/about.css
@@ -24,7 +24,7 @@
 }
 
 .about--container-text {
-  margin-top: 1.6875rem;
+  margin-top: var(--spacer-sm);
 }
 
   /* ========== MEDIA QUERIES (MEDIUM DEVICES) ========= */
