--- a/src/components/hero/hero.css
+++ b/src/components/hero/hero.css
@@ -2,8 +2,8 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    margin: var(--spacer-sm) auto;
     max-width: 290px;
+    margin: 0 auto var(--spacer-sm);
   }
 
   .hero--title {
