--- a/src/components/menu/menu.css
+++ b/src/components/menu/menu.css
@@ -50,13 +50,30 @@
   flex-basis: 150px;
 }
 
+#menu--item-btn-order {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  background-color: var(--color-bg);
+  color: var(--color-blue);
+  border: 2px solid var(--color-blue);
+  padding: 10px;
+  width: 135px;
+}
+
+#menu--item-btn:active {
+  box-shadow: none;
+  transform: translateY(-2px);
+  transform: translateX(2px);
+  border: 2px solid var(--color-blue);
+}
+
 .menu--btn-wrapper {
   display: flex;
   justify-content: center;
   align-items: center;
   margin: var(--spacer-sm) 0;
 }
-
 
   /* ========== MEDIA QUERIES (MEDIUM DEVICES) ========= */
 
