--- a/src/components/cart/cart.css
+++ b/src/components/cart/cart.css
@@ -131,7 +131,6 @@
   transition: transform 0.3s ease-in-out;
 }
 
-
 .checkout--spinner-container {
   width: 100%;
   height: 100%;
@@ -152,6 +151,25 @@
 @keyframes spin {
   0% { transform: rotate(0deg); }
   100% { transform: rotate(360deg); }
+}
+
+
+#cart--item-btn-order {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  background-color: var(--color-bg);
+  color: var(--color-blue);
+  border: 2px solid var(--color-blue);
+  padding: 10px;
+  width: 135px;
+}
+
+#cart--item-btn:active {
+  box-shadow: none;
+  transform: translateY(-2px);
+  transform: translateX(2px);
+  border: 2px solid var(--color-blue);
 }
 
 @media screen and (min-width: 768px) {
