--- a/src/components/cart/cart.css
+++ b/src/components/cart/cart.css
@@ -142,7 +142,7 @@
 .checkout--spinner {
   width: 75px;
   height: 75px;
-  border: 5px solid var(--color-light);
+  border: 5px solid var(--color-bg);
   border-top: 5px solid var(--color-red);
   border-radius: 50%;
   animation: spin 0.5s linear infinite;
