--- a/src/components/cart/cart.css
+++ b/src/components/cart/cart.css
@@ -11,9 +11,9 @@
 }
 
 .cart--container {
-  padding-top: var(--spacer-sm);
-  margin: 0 auto;
-  max-width: 800px;
+  display: flex;
+  flex-direction: column;
+  height: 90vh;
 }
 
 .cart--title {
@@ -26,7 +26,7 @@
   flex-direction: column;
   border: 3px solid var(--color-blue);
   border-radius: 20px;
-  min-height: 50vh;
+  flex: 1;
 }
 
 .checkout {
