--- a/src/components/cart/cart.css
+++ b/src/components/cart/cart.css
@@ -7,6 +7,7 @@
   bottom: 0;
   position: fixed;
   background-position: center;
+  overflow: scroll;
 }
 
 .cart--container {
@@ -24,7 +25,6 @@
   display: flex;
   flex-direction: column;
   border: 3px solid var(--color-blue);
-  border-radius: 20px;
   flex: 1;
   overflow: scroll;
 }
