STYLE: Adjusted JSON data and styling for menu and cart

--- a/src/components/menu/menu.css
+++ b/src/components/menu/menu.css
@@ -53,6 +53,7 @@
   display: -webkit-box;
   -webkit-line-clamp: 3;
   -webkit-box-orient: vertical;
+  text-align: justify;
 }
 
 .menu--item-details-text.expanded {
