--- a/src/index.css
+++ b/src/index.css
@@ -21,7 +21,7 @@
   --color-light: rgba(255, 255, 255, 0.7);
   --color-gradient: linear-gradient(180deg, var(--color-blue), transparent);
   --transition: all 300ms ease-in-out;
-  --transform: scale(1.02);
+  --transform: scale(1.2);
 
   --spacer-xs: 0.5rem;
   --spacer-sm: 2rem;
@@ -146,7 +146,9 @@ a:hover {
 }
 
 .btn-light:hover {
-  background-color: var(--color-petnat);
+  color: var(--color-bg);
+  background-color: var(--color-blue);
+  border: 2px solid var(--color-bg);
   cursor: pointer;
 }
 
